style: minor fixes
- update favicon.ico
- properly format the date on the home page
- update scrollbar color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@
 
 @layer base {
   * {
-    @apply border-border scrollbar-thin scrollbar-track-transparent scrollbar-thumb-ring/40;
+    @apply border-border scrollbar-thin scrollbar-track-transparent scrollbar-thumb-[#818cf8]/50;
   }
 
   body {
